{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 7,
  "lineage": "04baaae0-8b76-467b-4315-3e366e0154bb",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "igw-vpw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:internet-gateway/igw-095a43d99a5ec72d6",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-02358ddc1cb955bcd"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-02358ddc1cb955bcd"
                ]
              }
            ],
            "id": "igw-095a43d99a5ec72d6",
            "internet_gateway_id": "igw-095a43d99a5ec72d6",
            "owner_id": "454143665149",
            "region": "ap-south-1",
            "tags": {
              "Name": "Bootcamp-vpc-do-not-delete-igw",
              "Owner": "pooja.yerawar@einfochips.com",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_nat_gateway",
      "name": "nat-vpw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008e773cd6a5ea553",
            "association_id": "eipassoc-0effede71548b1400",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Bootcamp-vpc-do-not-delete-nat"
                ]
              }
            ],
            "id": "nat-054be5efc41467fef",
            "network_interface_id": "eni-0c02e8e7413a4ed18",
            "private_ip": "10.0.1.12",
            "public_ip": "13.126.75.77",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "state": "available",
            "subnet_id": "subnet-0c1d51bdec6bbfc49",
            "tags": {
              "Name": "Bootcamp-vpc-do-not-delete-nat",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02358ddc1cb955bcd"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc-vpw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:vpc/vpc-02358ddc1cb955bcd",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d4757aec8e9b48aa",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-2db72344",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Bootcamp-vpc-do-not-delete-vpc"
                ]
              }
            ],
            "id": "vpc-02358ddc1cb955bcd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f4d7df0cf95260c3",
            "owner_id": "454143665149",
            "region": "ap-south-1",
            "tags": {
              "Name": "Bootcamp-vpc-do-not-delete-vpc",
              "Owner": "pooja.yerawar@einfochips.com",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt-vpw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:route-table/rtb-093e10799ac4aefa7",
            "id": "rtb-093e10799ac4aefa7",
            "owner_id": "454143665149",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-054be5efc41467fef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpw-private-rt",
              "Terraform": "true",
              "bu": "ia",
              "enddate": "31-May-2026",
              "owner": "vijayalaxmi.waghmare@einfochips.com"
            },
            "tags_all": {
              "Name": "vpw-private-rt",
              "Terraform": "true",
              "bu": "ia",
              "enddate": "31-May-2026",
              "owner": "vijayalaxmi.waghmare@einfochips.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-02358ddc1cb955bcd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "454143665149",
            "id": "rtb-093e10799ac4aefa7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_nat_gateway.nat-vpw",
            "data.aws_vpc.vpc-vpw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt-vpw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:route-table/rtb-05379465bf24c3968",
            "id": "rtb-05379465bf24c3968",
            "owner_id": "454143665149",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095a43d99a5ec72d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpw-public-rt",
              "Terraform": "true",
              "bu": "ia",
              "enddate": "31-May-2026",
              "owner": "vijayalaxmi.waghmare@einfochips.com"
            },
            "tags_all": {
              "Name": "vpw-public-rt",
              "Terraform": "true",
              "bu": "ia",
              "enddate": "31-May-2026",
              "owner": "vijayalaxmi.waghmare@einfochips.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-02358ddc1cb955bcd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "454143665149",
            "id": "rtb-05379465bf24c3968",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_internet_gateway.igw-vpw",
            "data.aws_vpc.vpc-vpw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc-vpw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a0a3b0ea21f78bf",
            "region": "ap-south-1",
            "route_table_id": "rtb-093e10799ac4aefa7",
            "subnet_id": "subnet-0dce4f0482f592f49"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "454143665149",
            "id": "rtbassoc-01a0a3b0ea21f78bf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.private_rt-vpw",
            "aws_subnet.private-vpw",
            "data.aws_nat_gateway.nat-vpw",
            "data.aws_vpc.vpc-vpw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc-vpw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ba9dc8ae6b53a6f",
            "region": "ap-south-1",
            "route_table_id": "rtb-05379465bf24c3968",
            "subnet_id": "subnet-034c3336c304972aa"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "454143665149",
            "id": "rtbassoc-00ba9dc8ae6b53a6f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.public_rt-vpw",
            "aws_subnet.public-vpw",
            "data.aws_internet_gateway.igw-vpw",
            "data.aws_vpc.vpc-vpw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-vpw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:subnet/subnet-0dce4f0482f592f49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.121.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dce4f0482f592f49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454143665149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpw-subnet-private",
              "Terraform": "true",
              "bu": "ia",
              "enddate": "31-May-2026",
              "owner": "vijayalaxmi.waghmare@einfochips.com"
            },
            "tags_all": {
              "Name": "vpw-subnet-private",
              "Terraform": "true",
              "bu": "ia",
              "enddate": "31-May-2026",
              "owner": "vijayalaxmi.waghmare@einfochips.com"
            },
            "vpc_id": "vpc-02358ddc1cb955bcd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "454143665149",
            "id": "subnet-0dce4f0482f592f49",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_vpc.vpc-vpw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-vpw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:subnet/subnet-034c3336c304972aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034c3336c304972aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454143665149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpw-subnet-public",
              "Owner": "vijayalaxmi.waghmare@einfochips.com",
              "Terraform": "true",
              "bu": "ia",
              "enddate": "31-May-2026",
              "owner": "vijayalaxmi.waghmare@einfochips.com"
            },
            "tags_all": {
              "Name": "vpw-subnet-public",
              "Owner": "vijayalaxmi.waghmare@einfochips.com",
              "Terraform": "true",
              "bu": "ia",
              "enddate": "31-May-2026",
              "owner": "vijayalaxmi.waghmare@einfochips.com"
            },
            "vpc_id": "vpc-02358ddc1cb955bcd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "454143665149",
            "id": "subnet-034c3336c304972aa",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_vpc.vpc-vpw"
          ]
        }
      ]
    }
  ]
}